# stereotype-detector

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt  training_args.json
data/: ICR_sample.csv
racism_classifier/: config.py  evaluation.py  hyperparameter_optimization.py  preprocessing.py  run.py  test.py  utils.py
racism_classifier/finetuning/: BERT.py  test.py
racism_classifier/logger/: metrics_logger.py
scripts/: finetune.py  preprocess_and_finetune.py
stereotype_detector/: config.py  evaluation.py  hyperparameter_optimization.py  preprocessing.py  run.py  utils.py
stereotype_detector/finetuning/: BERT.py  test.py
stereotype_detector/logger/: metrics_logger.py
tmp_trainer/runs/Aug06_19-26-29_LogosOne/: events.out.tfevents.1754501308.LogosOne.29568.0
